# tauri_svelte

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src/: App.svelte
src-tauri/: Cargo.toml  ISTRUZIONI_PROGETTO.MD  tauri.conf.json
src-tauri/src/: access.rs  main.rs
src/components/: Button1.svelte  Tabella.svelte
