[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# dipendenza per la compilazione
[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

# dipendenze per il programma eseguibile .exe
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = [] }
odbc = "0.17.0"
odbc-sys = "0.8.2"
odbc-safe = "0.5.0"
env_logger = "0.7"

# caratteristiche delle dipendenze da scaricare necessarie per il programma
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
